--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero__title">Эффективные решения 
+          <br>для вашего бизнеса</h1>
         <button data-modal-open type="button" class="button">Заказать услугу</button>
       </section>
         <section class="feature">
@@ -469,8 +470,10 @@
                       <use href="./images/black-defs.svg#icon-check"></use>
                     </svg>
                   </span>
-                  Соглашаюсь с рассылкой и принимаю
-                  <a class="contract__conditions" href="#"> Условия договора</a>
+                  <div>
+                      Соглашаюсь с рассылкой и принимаю
+                      <a class="contract__conditions" href="#"> Условия договора</a>
+                  </div>
                 </label>
               </div>
             <button class="modal-submit" type="submit">Отправить</button>
