--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-  <header>
+  <header class="additional">
        <div class="header container">
           <a href="./index.html" class="logo"> Web<span class="header__logo--color">Studio</span></a>
           <div class="header-nav">
@@ -20,35 +20,37 @@
                   <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
                 </ul>
               </nav>
-              <div class="address">
-                <a class="address__item" href="mailto:info@devstudio.com">
-                  <svg class="address__icon" width="16px" height="12px">
-                    <use href="./images/symbol-defs.svg#envelope"></use>
-                  </svg>
-                  info@devstudio.com
-                </a>
-                <a class="address__item" href="tel:+380961111111">
-                  <svg class="address__icon" width="10px" height="16px">
-                    <use href="./images/symbol-defs.svg#smartphone"></use>
-                  </svg>
-                  +38 096 111 11 11
-                </a>
-              </div>
-              <div class="social-network">
-                <ul class="social-network__items list">
-                  <li class="social-network__item">
-                    <a class="social-network__link" href="#">Instagram</a>
-                  </li> 
-                  <li class="social-network__item">
-                    <a class="social-network__link" href="#">Twitter</a>
-                  </li>
-                  <li class="social-network__item">
-                    <a class="social-network__link" href="#">Facebook</a>
-                  </li>
-                  <li class="social-network__item">
-                    <a class="social-network__link" href="#">LinkedIn</a>
-                  </li>
-                </ul>
+              <div>
+                <div class="address">
+                  <a class="address__item" href="mailto:info@devstudio.com">
+                    <svg class="address__icon" width="16px" height="12px">
+                      <use href="./images/symbol-defs.svg#envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                  <a class="address__item" href="tel:+380961111111">
+                    <svg class="address__icon" width="10px" height="16px">
+                      <use href="./images/symbol-defs.svg#smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11
+                  </a>
+                </div>
+                <div class="social-network">
+                  <ul class="social-network__items list">
+                    <li class="social-network__item">
+                      <a class="social-network__link" href="#">Instagram</a>
+                    </li>
+                    <li class="social-network__item">
+                      <a class="social-network__link" href="#">Twitter</a>
+                    </li>
+                    <li class="social-network__item">
+                      <a class="social-network__link" href="#">Facebook</a>
+                    </li>
+                    <li class="social-network__item">
+                      <a class="social-network__link" href="#">LinkedIn</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
           </div>
           <div class="header-burger">
